--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,12 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
+  /* Design tokens: primary / secondary colors */
+  --color-primary: #b91111; 
+  --color-primary-foreground: #FFFFFF;
+  --color-secondary: #FF6B6B;
+  --color-secondary-foreground: #0D0C0F;
 }
 
 
